<resources>
    <string name="app_name">NBA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="not_logged_in">Not Logged in</string>
    <string name="login">LOGIN</string>
    <string name="user">user</string>
    <string name="admin">admin</string>
    <string name="imagennba">imagennba</string>
    <string name="todo">TODO</string>
    <string name="xd">TODO</string>
</resources>